--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "lint-prettier": "yarn lint:check && yarn prettier:check",
+    "prettier:fix": "prettier --write",
+    "lint-prettier": "yarn lint:check && yarn prettier:check ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
@@ -39,6 +40,7 @@
     "eslint": "^8.42.0",
     "express": "^4.18.2",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "mongoose": "^7.2.2",
     "prettier": "^2.8.8"
   }
